sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value val1
	val1 = getValeur(i);
        ^AlgBubbleSort1:6: error: not found: value val2
	val2 = getValeur(i+1)
        ^AlgBubbleSort1:8: error: not found: value val1
	if (val1>val2){
            ^